@@ -43,6 +43,7 @@ VERSION 4.3.0
 
 ?$pgv_lang["whatever"]								dd Monthname, year		Change	codes and comments
 ----------------------------------------------------------------------------------------
+*$pgv_lang["um_bu_logs"]                  24 Jan 2010       W 
 *$pgv_lang["USE_SILHOUETTE_help"]					05 Jan 2010				w added missing '>'
 *$pgv_lang["USE_SILHOUETTE_help"]					03 Jan 2010				W
 +$pgv_lang["USE_SILHOUETTE"]						02 Jan 2010				A
